--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <hgroup class="title">
                 <h1>WhatCharacter</h1>
                 <div data-alert class="alert-box">
-                    Coming Soon!
-                    <a href="#" class="close"><i class="fa fa-fw fa-times"></i></a>
+                    Coming Soon! Click <a href="https://docs.google.com/forms/d/1AV5PaFNFAmVSPM7clDwWNvoyNeIkeG44peiWS3d28Vg" target="_blank">here</a> to sign up for early access.
+                    <a href="#" class="close">&times;</a>
                 </div>
             </hgroup>
         </div>
