--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <p class="small-text-center"><small>&copy; 2015 - <a href="mailto:jacob@whatcharacter.com">Jacob P. Silvia</a>. Software version 0.0.5701.23366</small></p>
+    <p class="small-text-center"><small>&copy; 2015 - <a href="mailto:jacob@whatcharacter.com">Jacob P. Silvia</a>. Software version PRE-ALPHA.</small></p>
 
 
     <script src="/Scripts/foundation/fastclick.js"></script>
