--- a/Demo/Character/Alice.html
+++ b/Demo/Character/Alice.html
@@ -53,22 +53,46 @@
         </nav>
     </div>
 
-    <div class="row content">
+   <div class="row content">
 
+    <h1>Alice</h1>
 
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>WhatCharacter</h1>
-                <div data-alert class="alert-box">
-                    Coming Soon! Click <a href="https://docs.google.com/forms/d/1AV5PaFNFAmVSPM7clDwWNvoyNeIkeG44peiWS3d28Vg" target="_blank">here</a> to sign up for early access.
-                    <br />
-                    To see a demo, click <a href="/Demo">here</a>.
-                    <a href="#" class="close">&times;</a>
-                </div>
-            </hgroup>
-        </div>
-    </section>
+    <div class="columns small-10">
+      <dl>
+      <dt>Description</dt>
+      <dd>Alice is the main character of Lewis Carroll's most popular books. She engages in adventures in Wonderland, and then later in Looking-Glass Land.</dd>
+      </dl>
+    </div>
+
+    <div class="columns small-12">
+      <h2>Appearances</h2>
+      <table>
+        <tr>
+          <th>Title</th>
+          <th>Year</th>
+          <th>Format</th>
+          <th>Performed By</th>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/AAIW1865.html">Alice's Adventures in Wonderland</a></i></td>
+          <td>1865</td>
+          <td>Novel</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/TTLG1871.html">Through the Looking-Glass</a></i></td>
+          <td>1871</td>
+          <td>Novel</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/AIWL1951.html">Alice in Wonderland</a></i></td>
+          <td>1951</td>
+          <td>Film</td>
+          <td>Kathryn Beaumont (voice)</td>
+        </tr>
+      </table>
+    </div>
 
 
     </div>
