--- a/Demo/index.html
+++ b/Demo/index.html
@@ -9,7 +9,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>WhatCharacter.com</title>
+    <title>WhatCharacter.com - Demo</title>
     <link rel="icon" href="/Images/icon.png" type="image/png" />
 
     <link href="/Content/foundation/foundation.css" rel="stylesheet"/>
@@ -55,20 +55,21 @@
 
     <div class="row content">
 
+    <h1>Demo</h1>
 
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>WhatCharacter</h1>
-                <div data-alert class="alert-box">
-                    Coming Soon! Click <a href="https://docs.google.com/forms/d/1AV5PaFNFAmVSPM7clDwWNvoyNeIkeG44peiWS3d28Vg" target="_blank">here</a> to sign up for early access.
-                    <br />
-                    To see a demo, click <a href="/Demo">here</a>.
-                    <a href="#" class="close">&times;</a>
-                </div>
-            </hgroup>
-        </div>
-    </section>
+    <div data-alert class="alert-box">
+      Thank you for your interest. Please note that this is a PRE-ALPHA demo of the concept of this site. Links to this page can and will change without warning.
+      The content here does not necessarily reflect the style of future versions of this site.
+      <a href="#" class="close">&times;</a>
+    </div>
+
+      <div class="columns small-12">
+        <table>
+          <tr><th>What?</th><th>Count</th></tr>
+          <tr><td><a href="/Demo/Character">Characters</a></td><td>2</td></tr>
+          <tr><td><a href="/Demo/Work">Works</a></td><td>4</td></tr>
+        </table>
+      </div>
 
 
     </div>
