--- a/Demo/Character/DodgsonCharles.html
+++ b/Demo/Character/DodgsonCharles.html
@@ -53,22 +53,62 @@
         </nav>
     </div>
 
-    <div class="row content">
+   <div class="row content">
 
+    <h1>Lewis Carroll <small>(1832-1898)</h1>
 
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>WhatCharacter</h1>
-                <div data-alert class="alert-box">
-                    Coming Soon! Click <a href="https://docs.google.com/forms/d/1AV5PaFNFAmVSPM7clDwWNvoyNeIkeG44peiWS3d28Vg" target="_blank">here</a> to sign up for early access.
-                    <br />
-                    To see a demo, click <a href="/Demo">here</a>.
-                    <a href="#" class="close">&times;</a>
-                </div>
-            </hgroup>
-        </div>
-    </section>
+    <div class="columns small-12">
+      <dl>
+        <dt>Legal Name</dt>
+        <dd>Charles Lutwidge Dodgson</dd>
+      </dl>
+    </div>
+
+    <div class="columns small-10">
+      <dl>
+      <dt>Description</dt>
+      <dd>The Reverend Charles Lutwidge Dodgson, better known as Lewis Carroll, wrote several books, most notably several about a girl named Alice.</dd>
+      </dl>
+    </div>
+
+    <div class="columns small-12">
+      <h2>Appearances</h2>
+      <table>
+        <tr>
+          <th>Title</th>
+          <th>Year</th>
+          <th>Format</th>
+          <th>Performed By</th>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/D1985.html">Dreamchild</a></i></td>
+          <td>1985</td>
+          <td>Film</td>
+          <td>Ian Holm</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="columns small-12">
+      <h2>Contributions</h2>
+      <table>
+        <tr>
+          <th>Title</th>
+          <th>Year</th>
+          <th>Format</th>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/AAIW1865.html">Alice's Adventures in Wonderland</a></i></td>
+          <td>1865</td>
+          <td>Novel</td>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/TTLG1871.html">Through the Looking-Glass</a></i></td>
+          <td>1871</td>
+          <td>Novel</td>
+        </tr>
+      </table>
+    </div>
 
 
     </div>
