--- a/Demo/Character/index.html
+++ b/Demo/Character/index.html
@@ -55,20 +55,30 @@
 
     <div class="row content">
 
+    <h1>Characters</h1>
 
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>WhatCharacter</h1>
-                <div data-alert class="alert-box">
-                    Coming Soon! Click <a href="https://docs.google.com/forms/d/1AV5PaFNFAmVSPM7clDwWNvoyNeIkeG44peiWS3d28Vg" target="_blank">here</a> to sign up for early access.
-                    <br />
-                    To see a demo, click <a href="/Demo">here</a>.
-                    <a href="#" class="close">&times;</a>
-                </div>
-            </hgroup>
-        </div>
-    </section>
+    <div class="columns small-12">
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Appearances</th>
+          <th>Performances</th>
+          <th>Contributions</th>
+        </tr>
+        <tr>
+          <td><a href="/Demo/Character/Alice.html">Alice</a></td>
+          <td>3</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td><a href="/Demo/Character/DodgsonCharles.html">Lewis Carroll</a></td>
+          <td>1</td>
+          <td>0</td>
+          <td>2</td>
+        </tr>
+      </table>
+    </div>
 
 
     </div>
