--- a/Demo/Work/AAIW1865.html
+++ b/Demo/Work/AAIW1865.html
@@ -53,22 +53,41 @@
         </nav>
     </div>
 
-    <div class="row content">
+   <div class="row content">
 
+    <h1><i>Alice's Adventures in Wonderland</i> <small>(1865)</small></h1>
 
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>WhatCharacter</h1>
-                <div data-alert class="alert-box">
-                    Coming Soon! Click <a href="https://docs.google.com/forms/d/1AV5PaFNFAmVSPM7clDwWNvoyNeIkeG44peiWS3d28Vg" target="_blank">here</a> to sign up for early access.
-                    <br />
-                    To see a demo, click <a href="/Demo">here</a>.
-                    <a href="#" class="close">&times;</a>
-                </div>
-            </hgroup>
-        </div>
-    </section>
+    <div class="columns small-12">
+      <h2>Contributions</h2>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Role</th>
+        </tr>
+        <tr>
+          <td><a href="/Demo/Character/DodgsonCharles.html">Lewis Carroll</a></td>
+          <td>Author</td>
+        </tr>
+        <tr>
+          <td>John Tenniel</td>
+          <td>Illustrator</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="columns small-12">
+      <h2>Appearances</h2>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Performed By</th>
+        </tr>
+        <tr>
+          <td><a href="/Demo/Character/Alice.html">Alice</a></td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
 
 
     </div>
