--- a/Demo/Work/index.html
+++ b/Demo/Work/index.html
@@ -55,20 +55,37 @@
 
     <div class="row content">
 
+    <h1>Works</h1>
 
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>WhatCharacter</h1>
-                <div data-alert class="alert-box">
-                    Coming Soon! Click <a href="https://docs.google.com/forms/d/1AV5PaFNFAmVSPM7clDwWNvoyNeIkeG44peiWS3d28Vg" target="_blank">here</a> to sign up for early access.
-                    <br />
-                    To see a demo, click <a href="/Demo">here</a>.
-                    <a href="#" class="close">&times;</a>
-                </div>
-            </hgroup>
-        </div>
-    </section>
+    <div class="columns small-12">
+      <table>
+        <tr>
+          <th>Title</th>
+          <th>Year</th>
+          <th>Format</th>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/AAIW1865.html">Alice's Adventures in Wonderland</a></i></td>
+          <td>1865</td>
+          <td>Novel</td>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/TTLG1871.html">Through the Looking-Glass</a></i></td>
+          <td>1871</td>
+          <td>Novel</td>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/AIWL1951.html">Alice in Wonderland</a></i></td>
+          <td>1951</td>
+          <td>Film</td>
+        </tr>
+        <tr>
+          <td><i><a href="/Demo/Work/D1985.html">Dreamchild</a></i></td>
+          <td>1985</td>
+          <td>Film</td>
+        </tr>
+      </table>
+    </div>
 
 
     </div>
