fixing link on demo page

--- a/Demo/Work/D1985.html
+++ b/Demo/Work/D1985.html
@@ -79,7 +79,7 @@
           <th>Performed By</th>
         </tr>
         <tr>
-          <td><a href="/Demo/Character/Alice.html">Reverend Charles L. Dodgson</a></td>
+          <td><a href="/Demo/Character/DodgsonCharles.html">Reverend Charles L. Dodgson</a></td>
           <td>Ian Holm</td>
         </tr>
       </table>
