Adding role to demo for contributor.

--- a/Demo/Character/DodgsonCharles.html
+++ b/Demo/Character/DodgsonCharles.html
@@ -95,16 +95,19 @@
         <tr>
           <th>Title</th>
           <th>Year</th>
+          <th>Role</th>
           <th>Format</th>
         </tr>
         <tr>
           <td><i><a href="/Demo/Work/AAIW1865.html">Alice's Adventures in Wonderland</a></i></td>
           <td>1865</td>
+          <td>Author</td>
           <td>Novel</td>
         </tr>
         <tr>
           <td><i><a href="/Demo/Work/TTLG1871.html">Through the Looking-Glass</a></i></td>
           <td>1871</td>
+          <td>Author</td>
           <td>Novel</td>
         </tr>
       </table>
