missing closing tag

--- a/Demo/Character/DodgsonCharles.html
+++ b/Demo/Character/DodgsonCharles.html
@@ -55,7 +55,7 @@
 
    <div class="row content">
 
-    <h1>Lewis Carroll <small>(1832-1898)</h1>
+    <h1>Lewis Carroll <small>(1832-1898)</small></h1>
 
     <div class="columns small-12">
       <dl>
