adding responsive class to tables

--- a/Demo/Character/DodgsonCharles.html
+++ b/Demo/Character/DodgsonCharles.html
@@ -73,7 +73,7 @@
 
     <div class="columns small-12">
       <h2>Appearances</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Title</th>
           <th>Year</th>
@@ -91,7 +91,7 @@
 
     <div class="columns small-12">
       <h2>Contributions</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Title</th>
           <th>Year</th>
