adding responsive class to tables

--- a/Demo/Character/Alice.html
+++ b/Demo/Character/Alice.html
@@ -66,7 +66,7 @@
 
     <div class="columns small-12">
       <h2>Appearances</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Title</th>
           <th>Year</th>
