adding responsive class to tables

--- a/Demo/Character/index.html
+++ b/Demo/Character/index.html
@@ -58,7 +58,7 @@
     <h1>Characters</h1>
 
     <div class="columns small-12">
-      <table>
+      <table class="responsive">
         <tr>
           <th>Name</th>
           <th>Appearances</th>
