adding responsive class to tables

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -64,7 +64,7 @@
     </div>
 
       <div class="columns small-12">
-        <table>
+        <table class="responsive">
           <tr><th>What?</th><th>Count</th></tr>
           <tr><td><a href="/Demo/Character">Characters</a></td><td>2</td></tr>
           <tr><td><a href="/Demo/Work">Works</a></td><td>4</td></tr>
