adding responsive class to tables

--- a/Demo/Work/index.html
+++ b/Demo/Work/index.html
@@ -58,7 +58,7 @@
     <h1>Works</h1>
 
     <div class="columns small-12">
-      <table>
+      <table class="responsive">
         <tr>
           <th>Title</th>
           <th>Year</th>
