--- a/Demo/Work/AAIW1865.html
+++ b/Demo/Work/AAIW1865.html
@@ -59,7 +59,7 @@
 
     <div class="columns small-12">
       <h2>Contributions</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Name</th>
           <th>Role</th>
@@ -77,7 +77,7 @@
 
     <div class="columns small-12">
       <h2>Appearances</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Name</th>
           <th>Performed By</th>
