--- a/Demo/Work/D1985.html
+++ b/Demo/Work/D1985.html
@@ -59,7 +59,7 @@
 
     <div class="columns small-12">
       <h2>Contributions</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Name</th>
           <th>Role</th>
@@ -73,7 +73,7 @@
 
     <div class="columns small-12">
       <h2>Appearances</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Name</th>
           <th>Performed By</th>
