--- a/Demo/Work/TTLG1871.html
+++ b/Demo/Work/TTLG1871.html
@@ -66,7 +66,7 @@
 
     <div class="columns small-12">
       <h2>Contributions</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Name</th>
           <th>Role</th>
@@ -84,7 +84,7 @@
 
     <div class="columns small-12">
       <h2>Appearances</h2>
-      <table>
+      <table class="responsive">
         <tr>
           <th>Name</th>
           <th>Performed By</th>
