--- a/index.html
+++ b/index.html
@@ -72,16 +72,20 @@
 
     </div>
     
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- whatcharacter -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-7337440863011987"
-         data-ad-slot="3108642756"
-         data-ad-format="auto"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <div class="row">
+        <div class="small-12 columns">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- whatcharacter -->
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-7337440863011987"
+                data-ad-slot="3108642756"
+                data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+    </div>
 
     <div class="row">
         <div class="columns small-12 text-center">
